# crane

./: Cargo.toml  LICENSE  README.md
.github/workflows/: book.yml  publish-crate.yml  release.yml  rust-ci.yml
book/: book.toml
book/src/: SUMMARY.md  intro.md
book/src/configuration/: brick_config.md  config_file.md  crane_config.md  file_only.md
book/src/configuration/brick_actions/: README.md
crane/: Cargo.toml
crane/src/: config.rs  logging.rs  main.rs
crane/src/cmd/: add.rs  commands.rs  list.rs  mod.rs
crane_bricks/: Cargo.toml  README.md
crane_bricks/src/: brick.rs  context.rs  file_utils.rs  lib.rs
crane_bricks/src/actions/: common.rs  insert_file.rs  mod.rs  modify_file.rs  run_command.rs
crane_bricks/tests/: integration_test.rs
crane_bricks/tests/bricks/insert_with_config/: brick.toml
crane_bricks/tests/bricks/modify_append/: brick.toml
crane_bricks/tests/bricks/modify_prepend/: brick.toml
crane_bricks/tests/bricks/modify_replace/: brick.toml
crane_bricks/tests/bricks/run_command/: brick.toml
crane_bricks/tests/common/: mod.rs
crane_bricks/tests/data/: Test.toml
crane_cli/: Cargo.toml
crane_cli/src/: config.rs  main.rs  utils.rs
crane_cli/src/cmd/: add.rs  cmd.rs  list.rs  mod.rs
example/: config.toml
example/bricks/mit/: LICENSE
example/bricks/prettier/: brick.toml
example/bricks/serde/: brick.toml
src/: bricks.rs  config.rs  files.rs  main.rs  utils.rs
src/cmd/: add.rs  cmd.rs  list.rs  mod.rs
