[package]
name = "crane"
description = "Easily add bricks (files or snippets) to your projects!"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/timothebot/crane"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "utility"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.6"
clap = { version = "4.5.47", features = ["derive"] }
fuzzy-matcher = "0.3.7"
anyhow = "1.0.99"
clap-verbosity = "2.1.0"
env_logger = "0.11.8"
log = "0.4.28"
crane_bricks = { path = "../crane_bricks/", version = "0.1.0"}
colog = "1.4.0"
colored = "3.0.0"
