[package]
name = "crane_bricks"
description = "Execute bricks"
version = "0.1.0"
edition = "2024"
license = "mit"
repository = "https://github.com/timothebot/crane"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.6"
anyhow = "1.0.99"
log = "0.4.28"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11.8"
