[package]
name = "crane_cli"
version = "0.1.0"
edition = "2024"
author = "timothebot"

[[bin]]
name = "crane"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.6"
clap = { version = "4.5.47", features = ["derive"] }
fuzzy-matcher = "0.3.7"
anyhow = "1.0.99"
clap-verbosity = "2.1.0"
env_logger = "0.11.8"
log = "0.4.28"
crane_bricks = { path = "../crane_bricks/" }
colog = "1.4.0"
colored = "3.0.0"
